--- a/online-zoo/assets/sass/layout/_pets.scss
+++ b/online-zoo/assets/sass/layout/_pets.scss
@@ -1,6 +1,7 @@
 .pets {
   height: 1079px;
   position: relative;
+  margin-top: 20px;
   // * {
   //   border: 1px dotted green;
   // }
@@ -32,15 +33,15 @@
 .slider-button__left,
 .slider-button__right {
   position: absolute;
-  top: 408px;
+  top: 402px;
 }
 
 .slider-button__left {
-  left: -85px;
+  left: -80px;
 }
 
 .slider-button__right {
-  right: -85px;
+  right: -72px;
 }
 
 .slider__cards {
@@ -54,7 +55,7 @@
   grid-auto-flow: column;
   flex-wrap: wrap;
   row-gap: 20px;
-  column-gap: 30px;
+  column-gap: 29px;
   max-height: 890px;
   max-width: 1170px;
   overflow: hidden;
@@ -124,12 +125,12 @@
   }
 
   .card__title {
-    // position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 140%;
     /* or 22px */
 
+    letter-spacing: -0.8px;
     text-transform: uppercase;
   }
 
